--- a/noe4j_Python_usecase.ipynb
+++ b/noe4j_Python_usecase.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='exemple1.png' width='60%'>"
+    "<img src='Exemple1.png' width='60%'>"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "url = \"bolt://localhost:7687\"\n",
     "user = \"neo4j\"\n",
-    "password = \"lallaabibah\" "
+    "password = \"pwd\" "
    ]
   },
   {
