--- a/noe4j_Python_usecase.ipynb
+++ b/noe4j_Python_usecase.ipynb
@@ -29,7 +29,7 @@
     "Ce graphe présente plusieurs enseignant assurant des cours. Ces derniers nécessitent d'autres cours comme pré-requis. <br>\n",
     "Dans la structure précédente :\n",
     "<ol>\n",
-    "    <li>Un professeur est représenté par un noeud ayant comme label <b>Prof</b> et possédant deux pripriétés <b>name</b> et <b>city</b> </li>\n",
+    "    <li>Un professeur est représenté par un noeud ayant comme label <b>Prof</b> et possédant deux propriétés <b>name</b> et <b>city</b> </li>\n",
     "        <li>Un cours est représenté par un noeud ayant comme label <b>Cours</b> et possédant une seule pripriété <b> label </b> </li>\n",
     "            <li>La relation entre un professeur et un cours possède le type <b>enseigne</b></li>\n",
     "            La relation entre un cours et un autre cours possède le type <b>necessite</b>\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -352,140 +352,125 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>{'city': 'El Jadida', 'name': 'Madani'}</td>\n",
-       "      <td>({'city': 'El Jadida', 'name': 'Madani'}, ense...</td>\n",
-       "      <td>{'label': 'Langage C'}</td>\n",
+       "      <td>enseigne</td>\n",
+       "      <td>{'label': 'Langage C', 'coeff': 2}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>{'city': 'El Jadida', 'name': 'Madani'}</td>\n",
-       "      <td>({'city': 'El Jadida', 'name': 'Madani'}, ense...</td>\n",
-       "      <td>{'label': 'UML'}</td>\n",
+       "      <td>enseigne</td>\n",
+       "      <td>{'label': 'UML', 'coeff': 5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>{'city': 'Casablanca', 'name': 'El Kafi'}</td>\n",
-       "      <td>({'city': 'Casablanca', 'name': 'El Kafi'}, en...</td>\n",
+       "      <td>enseigne</td>\n",
        "      <td>{'label': 'Architecture'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>{'city': 'Rabat', 'name': 'Riffi'}</td>\n",
-       "      <td>({'city': 'Rabat', 'name': 'Riffi'}, enseigne,...</td>\n",
-       "      <td>{'label': 'BDR'}</td>\n",
+       "      <td>enseigne</td>\n",
+       "      <td>{'label': 'BDR', 'coeff': 4}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>{'city': 'Rabat', 'name': 'Riffi'}</td>\n",
-       "      <td>({'city': 'Rabat', 'name': 'Riffi'}, enseigne,...</td>\n",
+       "      <td>enseigne</td>\n",
        "      <td>{'label': 'Algorithmique'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>{'city': 'El Jadida', 'name': 'Silkan'}</td>\n",
-       "      <td>({'city': 'El Jadida', 'name': 'Silkan'}, ense...</td>\n",
-       "      <td>{'label': 'C++'}</td>\n",
+       "      <td>enseigne</td>\n",
+       "      <td>{'label': 'C++', 'coeff': 4}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>{'label': 'Algorithmique'}</td>\n",
-       "      <td>({'label': 'Algorithmique'}, necessite, {'labe...</td>\n",
+       "      <td>necessite</td>\n",
        "      <td>{'label': 'Architecture'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>{'label': 'Langage C'}</td>\n",
-       "      <td>({'label': 'Langage C'}, necessite, {'label': ...</td>\n",
+       "      <td>{'label': 'Langage C', 'coeff': 2}</td>\n",
+       "      <td>necessite</td>\n",
        "      <td>{'label': 'Algorithmique'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>{'label': 'C++'}</td>\n",
-       "      <td>({'label': 'C++'}, necessite, {'label': 'Langa...</td>\n",
-       "      <td>{'label': 'Langage C'}</td>\n",
+       "      <td>{'label': 'C++', 'coeff': 4}</td>\n",
+       "      <td>necessite</td>\n",
+       "      <td>{'label': 'Langage C', 'coeff': 2}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>{'label': 'BDR'}</td>\n",
-       "      <td>({'label': 'BDR'}, necessite, {'label': 'Algor...</td>\n",
+       "      <td>{'label': 'BDR', 'coeff': 4}</td>\n",
+       "      <td>necessite</td>\n",
        "      <td>{'label': 'Algorithmique'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>{'label': 'Prog Web'}</td>\n",
-       "      <td>({'label': 'Prog Web'}, necessite, {'label': '...</td>\n",
-       "      <td>{'label': 'BDR'}</td>\n",
+       "      <td>{'label': 'Prog Web', 'coeff': 3.5}</td>\n",
+       "      <td>necessite</td>\n",
+       "      <td>{'label': 'BDR', 'coeff': 4}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>{'label': 'Prog Web'}</td>\n",
-       "      <td>({'label': 'Prog Web'}, necessite, {'label': '...</td>\n",
+       "      <td>{'label': 'Prog Web', 'coeff': 3.5}</td>\n",
+       "      <td>necessite</td>\n",
        "      <td>{'label': 'Algorithmique'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>{'label': 'UML'}</td>\n",
-       "      <td>({'label': 'UML'}, necessite, {'label': 'BDR'})</td>\n",
-       "      <td>{'label': 'BDR'}</td>\n",
+       "      <td>{'label': 'UML', 'coeff': 5}</td>\n",
+       "      <td>necessite</td>\n",
+       "      <td>{'label': 'BDR', 'coeff': 4}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    StartNode  \\\n",
-       "0     {'city': 'El Jadida', 'name': 'Madani'}   \n",
-       "1     {'city': 'El Jadida', 'name': 'Madani'}   \n",
-       "2   {'city': 'Casablanca', 'name': 'El Kafi'}   \n",
-       "3          {'city': 'Rabat', 'name': 'Riffi'}   \n",
-       "4          {'city': 'Rabat', 'name': 'Riffi'}   \n",
-       "5     {'city': 'El Jadida', 'name': 'Silkan'}   \n",
-       "6                  {'label': 'Algorithmique'}   \n",
-       "7                      {'label': 'Langage C'}   \n",
-       "8                            {'label': 'C++'}   \n",
-       "9                            {'label': 'BDR'}   \n",
-       "10                      {'label': 'Prog Web'}   \n",
-       "11                      {'label': 'Prog Web'}   \n",
-       "12                           {'label': 'UML'}   \n",
+       "                                    StartNode   Relation  \\\n",
+       "0     {'city': 'El Jadida', 'name': 'Madani'}   enseigne   \n",
+       "1     {'city': 'El Jadida', 'name': 'Madani'}   enseigne   \n",
+       "2   {'city': 'Casablanca', 'name': 'El Kafi'}   enseigne   \n",
+       "3          {'city': 'Rabat', 'name': 'Riffi'}   enseigne   \n",
+       "4          {'city': 'Rabat', 'name': 'Riffi'}   enseigne   \n",
+       "5     {'city': 'El Jadida', 'name': 'Silkan'}   enseigne   \n",
+       "6                  {'label': 'Algorithmique'}  necessite   \n",
+       "7          {'label': 'Langage C', 'coeff': 2}  necessite   \n",
+       "8                {'label': 'C++', 'coeff': 4}  necessite   \n",
+       "9                {'label': 'BDR', 'coeff': 4}  necessite   \n",
+       "10        {'label': 'Prog Web', 'coeff': 3.5}  necessite   \n",
+       "11        {'label': 'Prog Web', 'coeff': 3.5}  necessite   \n",
+       "12               {'label': 'UML', 'coeff': 5}  necessite   \n",
        "\n",
-       "                                             Relation  \\\n",
-       "0   ({'city': 'El Jadida', 'name': 'Madani'}, ense...   \n",
-       "1   ({'city': 'El Jadida', 'name': 'Madani'}, ense...   \n",
-       "2   ({'city': 'Casablanca', 'name': 'El Kafi'}, en...   \n",
-       "3   ({'city': 'Rabat', 'name': 'Riffi'}, enseigne,...   \n",
-       "4   ({'city': 'Rabat', 'name': 'Riffi'}, enseigne,...   \n",
-       "5   ({'city': 'El Jadida', 'name': 'Silkan'}, ense...   \n",
-       "6   ({'label': 'Algorithmique'}, necessite, {'labe...   \n",
-       "7   ({'label': 'Langage C'}, necessite, {'label': ...   \n",
-       "8   ({'label': 'C++'}, necessite, {'label': 'Langa...   \n",
-       "9   ({'label': 'BDR'}, necessite, {'label': 'Algor...   \n",
-       "10  ({'label': 'Prog Web'}, necessite, {'label': '...   \n",
-       "11  ({'label': 'Prog Web'}, necessite, {'label': '...   \n",
-       "12    ({'label': 'UML'}, necessite, {'label': 'BDR'})   \n",
-       "\n",
-       "                       EndNode  \n",
-       "0       {'label': 'Langage C'}  \n",
-       "1             {'label': 'UML'}  \n",
-       "2    {'label': 'Architecture'}  \n",
-       "3             {'label': 'BDR'}  \n",
-       "4   {'label': 'Algorithmique'}  \n",
-       "5             {'label': 'C++'}  \n",
-       "6    {'label': 'Architecture'}  \n",
-       "7   {'label': 'Algorithmique'}  \n",
-       "8       {'label': 'Langage C'}  \n",
-       "9   {'label': 'Algorithmique'}  \n",
-       "10            {'label': 'BDR'}  \n",
-       "11  {'label': 'Algorithmique'}  \n",
-       "12            {'label': 'BDR'}  "
+       "                               EndNode  \n",
+       "0   {'label': 'Langage C', 'coeff': 2}  \n",
+       "1         {'label': 'UML', 'coeff': 5}  \n",
+       "2            {'label': 'Architecture'}  \n",
+       "3         {'label': 'BDR', 'coeff': 4}  \n",
+       "4           {'label': 'Algorithmique'}  \n",
+       "5         {'label': 'C++', 'coeff': 4}  \n",
+       "6            {'label': 'Architecture'}  \n",
+       "7           {'label': 'Algorithmique'}  \n",
+       "8   {'label': 'Langage C', 'coeff': 2}  \n",
+       "9           {'label': 'Algorithmique'}  \n",
+       "10        {'label': 'BDR', 'coeff': 4}  \n",
+       "11          {'label': 'Algorithmique'}  \n",
+       "12        {'label': 'BDR', 'coeff': 4}  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = neo4j.run(\"\"\"\n",
-    "MATCH (n)-[r]->(m) return n as StartNode, r as Relation, m as EndNode\n",
+    "MATCH (n)-[r]->(m) return n as StartNode, type(r) as Relation, m as EndNode\n",
     "\"\"\")\n",
     "df = pd.DataFrame(result.data())\n",
     "df"
@@ -814,7 +799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comme on peut projeter sur une information donnée. Ici, on est intéressé seulement le nom de chaque professeur."
+    "Comme on peut projeter sur une information donnée. Ici, on est intéressé seulement au nom de chaque professeur."
    ]
   },
   {
@@ -1648,16 +1633,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient11\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<neo4j.work.result.Result at 0x7f82d80f00a0>"
+       "<neo4j.work.result.Result at 0x7f82d8125ca0>"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,7 +1657,7 @@
    "source": [
     "neo4j.run(\"\"\"\n",
     "    match(c:Cours{label:'Architecture'})\n",
-    "    set c.coeff=1.5\n",
+    "    set c.coeff=1\n",
     "    return c\n",
     "\"\"\")\n",
     "neo4j.run(\"\"\"\n",
@@ -1702,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1726,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Architecture</td>\n",
-       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1772,7 +1764,7 @@
       ],
       "text/plain": [
        "         c.label  c.coeff\n",
-       "0   Architecture      1.5\n",
+       "0   Architecture      1.0\n",
        "1  Algorithmique      1.5\n",
        "2      Langage C      2.0\n",
        "3            C++      4.0\n",
@@ -1781,7 +1773,7 @@
        "6            UML      5.0"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
