--- a/noe4j_Python_usecase.ipynb
+++ b/noe4j_Python_usecase.ipynb
@@ -19,14 +19,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src='struct.png' width='40%'>"
+    "<img src='images/struct.png' width='40%'>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ce graphe présente plusieurs enseignant assurant des cours. Ces derniers nécessitent d'autres cours comme pré-requis. <br>\n",
+    "Ce graphe présente plusieurs enseignants assurant des cours. Ces derniers nécessitent d'autres cours comme pré-requis. <br>\n",
     "Dans la structure précédente :\n",
     "<ol>\n",
     "    <li>Un professeur est représenté par un noeud ayant comme label <b>Prof</b> et possédant deux propriétés <b>name</b> et <b>city</b> </li>\n",
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='Exemple1.png' width='60%'>"
+    "<img src='images/exemple1.png' width='60%'>"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = \"bolt://localhost:7687\"\n",
     "user = \"neo4j\"\n",
-    "password = \"pwd\" "
+    "password = \"lallaabibah\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<neo4j.work.result.Result at 0x7f82a81926d0>"
+       "<neo4j.work.result.Result at 0x7fdfe8075bb0>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
